--- a/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/bottom.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/bottom.html
@@ -1,5 +1,5 @@
 <!-- bottom start -->
-<div class="ui bottom_blank" style="width:100%; height:20px;">&nbsp;</div>
+<div class="ui bottom_blank" style="width:100%; margin-top:40px;">&nbsp;</div>
 <div class="ui bottom inverted vertical footer segment" style="position: fixed; width:100%; bottom: 0px;">
 	<!-- div class="ui center aligned container round">	
 		<div class="ui stackable inverted divided grid">
