--- a/jwebppy/src/main/resources/templates/platform/mgmt/board/content/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/board/content/write.html
@@ -11,18 +11,21 @@
   Board
   <div class="sub header">Here is a free board.</div>
 </div>
-<div class="fields">
-	<div class="field">
-		<div class="ui teal button BTN_save"><i class="search icon"></i> Save</div>
-		<div id="BTN_back" class="ui button" onclick=""><i class="redo icon"></i> Back</div>
-	</div>
+<div class="field">
+	<div class="ui teal button BTN_save"><i class="check icon"></i> Save</div>
+	<div class="ui button BTN_back"><i class="arrow left icon"></i> Back</div>
 </div>
 <div class="ui segment">
 	<form id="FORM_write" class="ui form" method="post" enctype="multipart/form-data">
-	<input type="hidden" id="bSeq" name="bSeq" value="1"/>
-	<input type="hidden" id="bcSeq" name="bcSeq"/>
-	<!-- input type="text" id="rUflSeq" name="rUflSeq"/ -->
-	<input type="file" id="files" name="files" multiple style="display:none;" />
+	<input type="hidden" id="bSeq" name="bSeq" th:value="${board.bSeq}"/>
+	<input type="hidden" id="bcSeq" name="bcSeq" th:value="${bcSeq}"/>
+	<input type="hidden" name="type" th:value="${type}"/>
+	<input type="hidden" name="query" th:value="${query}"/>
+	<input type="hidden" name="fromDate" th:value="${fromDate}"/>
+	<input type="hidden" name="toDate" th:value="${toDate}"/>
+	<input type="hidden" name="pageNumber" th:value="${pageNumber}"/>
+	<input type="hidden" name="rowPerPage" th:value="${rowPerPage}"/>	
+	<input type="file" id="files" name="files" multiple style="display:none;"/>
 	<textarea id="htmlContent" name="htmlContent" style="display:none;"></textarea>
 	<textarea id="textCcontent" name="textCcontent" style="display:none;"></textarea>
 	<div class="field">
@@ -33,24 +36,24 @@
 	<div class="ui segment">
 		<div class="ui one column grid">
 			<div class="column">
-				<div id="BTN_searchFile" class="ui button teal"><i class="search icon"></i> File</div>
+				<div id="BTN_searchFile" class="ui button teal"><i class="paperclip icon"></i> File</div>
 				<div id="BTN_deleteFile" class="ui button teal"><i class="minus icon"></i> Delete</div>
 			</div>
-		</div>	
-		<div class="ui divider"></div>
-		<div class="ui one column stackable grid">
-			<div class="column">
-				<div id="attachedFiles" class="ui relaxed divided list"></div>			
-			</div>
 		</div>
+		<th:block th:if="${board.fgUseReply == T(org.jwebppy.platform.core.PlatformCommonVo).YES}">
+			<div class="ui divider"></div>
+			<div class="ui one column stackable grid">
+				<div class="column">
+					<div id="attachedFiles" class="ui relaxed divided list"></div>			
+				</div>
+			</div>
+		</th:block>
 	</div>
 	</form>
 </div>
-<div class="fields">
-	<div class="field">
-		<div class="ui teal button BTN_save"><i class="search icon"></i> Save</div>
-		<div class="ui button" onclick=""><i class="redo icon"></i> Back</div>
-	</div>
+<div class="field">
+	<div class="ui teal button BTN_save"><i class="check icon"></i> Save</div>
+	<div class="ui button BTN_back"><i class="arrow left icon"></i> Back</div>
 </div>
 <script src="https://cdn.tiny.cloud/1/5e40ny5z6wo5fmuiihjtt5jha491leumkaax5ufvyaxt55a0/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 <script type="application/javascript">
@@ -61,45 +64,54 @@ $(document).ready(function() {
 		//plugins: 'a11ychecker advcode casechange formatpainter linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tinycomments tinymcespellchecker',
 		//toolbar: 'a11ycheck addcomment showcomments casechange checklist code formatpainter pageembed permanentpen table',
 		toolbar_mode: "floating",
+		plugins: "autoresize",
+		min_height: 400
 		//tinycomments_mode: 'embedded',
 		//tinycomments_author: 'Author name'
 		
 		//images_upload_url: "/dashboard/create/upload-cdimg",
 		//images_reuse_filename: true,
 		//language: "ko_KR",
-		height: 300
 	}).then(function(){
-		JpUtilsAjax.get({
-			url: "/platform/mgmt/board/content/detail/data",
-			data: { bcSeq: 90 },
-			success: function(data, textStatus, jqXHR) {
-				let result = data.RESULT;
-				
-				$("#bcSeq").val(result.bcSeq);
-				$("#title").val(result.title);
-				$("#htmlContent").val(result.htmlContent);
-				$("#textContent").val(result.textContent);
-				
-				tinymce.get("editor").setContent(result.htmlContent);
-			}
-		});
-		
-		JpUtilsAjax.get({
-			url: "/platform/mgmt/upload_file/list/data",
-			data: { ufSeq: 2, tSeq: 90 },
-			success: function(data, textStatus, jqXHR) {
-				let result = data.RESULT;
-				
-				if (JpUtilsObject.isNotNull(result))
-				{
-					$.each(result, function(i, item) {
-						addFile(item.originName, item.size, item.uflSeq)	
-					});
+		if (JpUtilsString.isNotEmpty($("#bcSeq").val()))
+		{
+			JpUtilsAjax.get({
+				url: "/platform/mgmt/board/content/detail/data",
+				data: { bcSeq: $("#bcSeq").val() },
+				success: function(data, textStatus, jqXHR) {
+					let result = data.RESULT;
+					
+					$("#bcSeq").val(result.bcSeq);
+					$("#title").val(result.title);
+					$("#htmlContent").val(result.htmlContent);
+					$("#textContent").val(result.textContent);
+					
+					tinymce.get("editor").setContent(result.htmlContent);
+				}
+			});
+			
+			let ufSeq = "[[${board.ufSeq}]]";
+			
+			if (JpUtilsString.isNotEmpty(ufSeq))
+			{
+				JpUtilsAjax.get({
+					url: "/platform/mgmt/upload/list/data",
+					data: { ufSeq: ufSeq, tSeq: $("#bcSeq").val() },
+					success: function(data, textStatus, jqXHR) {
+						let result = data.RESULT;
+						
+						if (JpUtilsObject.isNotNull(result))
+						{
+							$.each(result, function(i, item) {
+								addFile(item.fullOriginName, item.size, item.uflSeq)	
+							});
 
-					$("#FORM_write .ui.checkbox").checkbox();
-				};
-			}	
-		});
+							$("#FORM_write .ui.checkbox").checkbox();
+						};
+					}	
+				});				
+			};
+		};
 	});
 
 	$("#FORM_write").form({
@@ -120,8 +132,10 @@ $(document).ready(function() {
 	$(".BTN_save").on("click", function() {
 		if ($("#FORM_write").form("validate form"))
 		{
-			$("#htmlContent").val(tinymce.get("editor").getContent());
-			$("#textContent").val(tinymce.get("editor").getContent({format: "text"}));
+			let editor = tinymce.get("editor");
+			
+			$("#htmlContent").val(editor.getContent());
+			$("#textContent").val(editor.getContent({format: "text"}));
 			
 			let options = {
 					enctype: "multipart/form-data",				
@@ -132,7 +146,7 @@ $(document).ready(function() {
 					contentType: false,
 					cache: false,				
 					success: function(data, textStatus, jqXHR) {
-						alert("saved");
+						$(".BTN_back").trigger("click");
 					},
 					error: function(jqXHR, textStatus, errorThrown) {
 						let result = JSON.parse(jqXHR.responseText);
@@ -145,8 +159,16 @@ $(document).ready(function() {
 		};
 	});	
 
-	$("#BTN_back").on("click", function() {
+	$(".BTN_back").on("click", function() {
+		let url = "/platform/mgmt/board/content/list";
 		
+		if (JpUtilsString.isNotEmpty($("#bcSeq").val()))
+		{
+			url = "/platform/mgmt/board/content/detail";
+		};
+		
+		$("#FORM_write").attr("action", url);
+		$("#FORM_write")[0].submit(); 
 	});	
 	
 	$("#BTN_searchFile").on("click", function() {
