--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/login/history/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/login/history/list.html
@@ -11,17 +11,17 @@
 </div>
 <div class="ui segment">
 	<form id="FORM_search" class="ui form" autocomplete="off" onsubmit="return false;">
-	<input type="hidden" name="pageNumber" value="1"/>
-	<input type="hidden" name="rowPerPage" value="20"/>
+	<input type="hidden" id="pageNumber" name="pageNumber"  th:value="${pageNumber}"/>
+	<input type="hidden" id="rowPerPage" name="rowPerPage"  th:value="${rowPerPage}"/>
 	<div class="fields">
 		<div class="six wide field">
 			<div class="ui calendar">
-				<div class="ui input left icon"><i class="calendar icon"></i><input type="TEXT" id="fromDate" name="fromDate" placeholder="From Reg. Date"/></div>
+				<div class="ui input left icon"><i class="calendar icon"></i><input type="TEXT" id="fromDate" name="fromDate" placeholder="From Reg.Date"/></div>
 			</div>				
 		</div>
 		<div class="six wide field">
 			<div class="ui calendar">
-				<div class="ui input left icon"><i class="calendar icon"></i><input type="TEXT" id="toDate" name="toDate" placeholder="To Reg. Date"/></div>
+				<div class="ui input left icon"><i class="calendar icon"></i><input type="TEXT" id="toDate" name="toDate" placeholder="To Reg.Date"/></div>
 			</div>				
 		</div>
 	</div>	
@@ -52,7 +52,8 @@
 				},
 				onClickPageNumber: function(pageNumber)
 				{
-					doSearch(pageNumber);
+					$("#pageNumber").val(pageNumber);
+					doSearch();
 				}
 		};
 
@@ -67,9 +68,8 @@
 			}
 		});
 		
-		function doSearch(pageNumber)
+		function doSearch()
 		{
-			$("#FORM_search input[name=pageNumber]:hidden").val(JpUtilsString.defaultString(pageNumber, "1"));
 			listTable.load();
 		};	
 		
