플랫폼 리펙토링

--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/top.html
@@ -130,6 +130,7 @@ function makeGmb()
 	};
 };
 
+/*
 function breadcrumb()
 {
 	JpUtilsAjax.get({
@@ -162,14 +163,14 @@ function breadcrumb()
 		}
 	});	
 };
-
+*/
 $(document).ready(function() {
 	makeGmb();
-	breadcrumb();
+	//breadcrumb();
 });
 
 function logout()
 {
 	$("#FORM_logout").submit();	
-};	
+};
 </script>
