--- a/jwebppy/src/main/resources/templates/platform/mgmt/board/content/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/board/content/list.html
@@ -28,13 +28,13 @@
 		</div>
 	</div>	
 	<div class="fields">
-		<div class="two wide field">
+		<div class="three wide field">
 			<select id="type" name="type" class="ui search dropdown">				
 				<option value="TC">Title + Content</option>
 				<option value="WT">Writer</option>
 			</select>
 		</div>
-		<div class="eleven wide field">
+		<div class="ten wide field">
 			<div class="ui icon input">
 				<input type="text" id="query" name="query" placeholder="Search" th:value="${query}" /> <i class="search icon"></i>
 			</div>
