--- a/jwebppy/src/main/resources/templates/platform/layout/common/index.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/index.html
@@ -13,7 +13,7 @@
 			
 		<style type="text/css">
 			.main.container {
-				margin-top: 3em;
+				margin-top: 4em;
 			}
 			
 			html {
@@ -29,8 +29,8 @@
 	<div class="main container">
 		<div style="margin: 1em;">
 		<!-- location start -->
-		<div class="ui breadcrumb" id="AREA_breadcrumb"></div>
-		<div class="ui fitted divider"></div>
+		<!-- div class="ui breadcrumb" id="AREA_breadcrumb"></div>
+		<div class="ui fitted divider"></div -->
 		<!-- location end -->		
 		<th:block layout:fragment="content"></th:block>
 		</div>
