--- a/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
@@ -14,14 +14,14 @@
 	<div class="ui stackable grid">
 		<div class="row">
 			<div class="nine wide column">
-				<div class="ui dividing small header">Structure</div>
+				<div class="ui dividing header">Structure</div>
 				<div class="ui segment teal">
 					<div id="TREE_items"></div>
 				</div>
 			</div>
 			<div class="seven wide column">
 				<div id="AREA_createItem" class="field">
-					<div class="ui dividing small header">Attributes</div>
+					<div class="ui dividing header">Attributes</div>
 					<div id="TAB_viewItem" class="ui secondary pointing menu">
 						<a class="item active wrap" data-tab="general">General</a>
 						<a class="item wrap" data-tab="language">Language</a>
@@ -343,9 +343,6 @@
 					
 					changeTab();
 					tree.refresh();
-					
-					//refresg gmb. There is the function in top.html.
-					makeGmb();
 				}
 			});
 		};
