--- a/jwebppy/src/main/resources/templates/platform/security/authentication/login_form.html
+++ b/jwebppy/src/main/resources/templates/platform/security/authentication/login_form.html
@@ -31,9 +31,10 @@ let RESIZING_MIN_WIDTH = 1700;
 
 function resizeView()
 {
-	/*
-	let width = $(window).width();
+	//let width = $(window).width();
+	//let height = $(window).height();
 	
+	/*
 	if (width > RESIZING_MIN_WIDTH)
 	{
 		$("#IMG_main").width(width*0.97);
@@ -44,7 +45,8 @@ function resizeView()
 	}
 	*/
 	
-	$("#IMG_main").width($(window).width());
+	$("#IMG_main").width($(window).width() * 0.9);
+	$("#IMG_main").height($(window).height() * 0.9);
 };
 
 function loginCheck()
